added ReddisSessionHealthIndicator.class, TrainingTypeInitialLoadHealthIndicator.class. Modified GenericDAO, TraineeDAO, TrainerDAO, TrainingTypeDAO, UserDAO, AuthService, TrainingService. Added resources (best practics - dev, local, prod, stg). Modified test classes